<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lbl_num_one"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtNumOne"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:hint="@string/hint_num"
            android:inputType="numberSigned"
            android:textAlignment="viewEnd" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lbl_num_two"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtNumTwo"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:hint="@string/hint_num"
            android:inputType="numberSigned"
            android:textAlignment="viewEnd" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lbl_num_three"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtNumThree"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:hint="@string/hint_num"
            android:inputType="numberSigned"
            android:textAlignment="viewEnd" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtResultLeft"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:textAlignment="center"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtResultCenter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:textAlignment="center"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtResultRight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:textAlignment="center"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnLower"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_green_dark"
            android:text="@string/btn_lower"
            app:cornerRadius="5dp" />

        <Button
            android:id="@+id/btnHigher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_green_dark"
            android:text="@string/btn_higher"
            app:cornerRadius="5dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAscendant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/design_default_color_secondary_variant"
            android:text="@string/btn_ascendant"
            app:cornerRadius="5dp" />

        <Button
            android:id="@+id/btnDescendant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/design_default_color_secondary_variant"
            android:text="@string/btn_descendant"
            app:cornerRadius="5dp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnEraseAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/design_default_color_error"
        android:text="@string/btn_erase_all"
        app:cornerRadius="5dp" />
</LinearLayout>